# crypto-assignment

./: .gitignore  README.md  app.py  hashing.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py
blueprints/: api.py  cipher.py  hashing.py  hashing_api.py  home.py  steganography.py
ciphers/: columnar_transposition.py  rail_fence.py  scytale_cipher.py
static/css/: dark.css  input.css  style.css
static/js/: hashing.js  main.js
templates/: api.html  base.html  cipher.html  hashing.html  index.html  steganography.html
tests/: transposition.py
