[project]
name = "crypto-assignment"
version = "0.1.0"
description = "A web application for encrypting and decrypting text using various encryption algorithms."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sarthak Patil", email = "mail@sarthak.co.in" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Framework :: Flask"
]
dependencies = [
    "Flask>=3.1.1",
    "gunicorn>=23.0.0"
]
